--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,8 +14,14 @@
   }
 }
 
+
+
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+
+  font-family: 'Montserrat', sans-serif;
+
 }
+
+
+
+
